# tacaml

./: CLAUDE.md  README.md  dune-project  justfile  ta_caml.opam  tacaml.opam  tacaml.scm
src/: arr.ml  calculate.ml  calculate_pack.ml  conv.ml  conv.mli  defaults.ml  dune  function_description.ml  functions.ml  indicator.ml  input.ml  input_source.ml  ma_type.ml  ohlcv.ml  output.ml  output_destination.ml  output_old.ml  pack.ml  parser.ml  safe.ml  stub.c  stub.h  ta_lib.ml  tacaml.ml  tacaml.mli  type.ml  type_description.ml  wrappers.ml
src/old/: abstract_wip.txt  type_description_old.txt
test/: dune  test_parser.ml
