(library
 (name tacaml)
 (ctypes
  (external_library_name ta-lib)
  (build_flags_resolver pkg_config)
  (headers
   (include "ta_abstract.h" "ta_common.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
