(library
 (name tacaml)
 (public_name tacaml)
 (libraries containers)
 (preprocess
  (pps ppx_deriving.std ppx_hash ppx_compare))
 (ctypes
  (external_library_name ta-lib)
  (build_flags_resolver pkg_config)
  (headers
   (include "ta_abstract.h" "ta_common.h" "ta_func.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(env
 (dev
  (flags
   (:standard -w +a-4-40-58-42-44-48-70-66@8 -open Containers))))
